--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
     <head>
             <meta charset="UTF-8">
-            <title>淘宝网www.taobao.com</title>
+            <title>淘宝网 - 淘！我喜欢</title>
             <link rel="stylesheet" type="text/css" href="样式表.css">
             <script src="jquery-3.3.1.min.js"></script>
             <script src="lunbo.js"></script>
