--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
             <meta charset="UTF-8">
             <title>淘宝网 - 淘！我喜欢</title>
+            <link rel="shortcut icon" href="favicon.ico">
             <link rel="stylesheet" type="text/css" href="样式表.css">
             <script src="jquery-3.3.1.min.js"></script>
             <script src="lunbo.js"></script>
