--- a/index.html
+++ b/index.html
@@ -57,22 +57,23 @@
         <div style="background-color:white;">
         <div id="search" style="width:100%;height: 150px;position: relative;top:20px;display: table;">
             <div style="display: table-cell;vertical-align: middle;"><img src="imgs/taobao-logo.gif"></div>
-            <div style="position: relative;left:20px;">
-                <ul id="searchul" >
-                <li style="background-color: rgb(253, 93, 34); border-top-left-radius: 5px;border-top-right-radius: 5px;">
-                    <a href="#" style="color:white; " >宝贝</a>
-                </li>
-                <li><a href="#">天猫</a></li>
-                <li><a href="#">店铺</a></li>
-                <br>            
-            </ul>
+
+            <div id ="searchpanel" style="position: relative;left:20px;">
+                <div id="searchul"><ul  >
+                    <li style="background-color: rgb(253, 93, 34); border-top-left-radius: 5px;border-top-right-radius: 5px;">
+                        <a href="#" style="color:white; " >宝贝</a>
+                    </li>
+                    <li><a href="#">天猫</a></li>
+                    <li><a href="#">店铺</a></li>
+                </ul>
+                </div>
             <div id="searchinput" >
                 <form >
                     <input type="text" placeholder="      秋冬毛衣" >
                     <button type="submit" >搜索</button>
                 </form>
             </div>
-            <div id="topdiv"style="position: relative; left:25px;">
+            <div id="topdiv"style="position: relative; left:10px;">
                 <a href="#" style="color:orangered;">半身裙</a>
                 <a href="#" >女式衬衫</a>
                 <a href="#" style="color:orangered;">风衣</a>
