导航栏里品质生活家的id打错了

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 
                 <li style="border-top-left-radius: 10px;border-top-right-radius: 10px;"><a href="#shyjs" style="color:orangered">爱逛<br>好货</a></li>
                 <li><a href="#aiguanghaohuo" style="color: red">好店<br>直播</a></li>
-                <li><a href="#pzshj_2S" style="color: purple">品质<br>特色</a></li>
+                <li><a href="#pzshj_2" style="color: purple">品质<br>特色</a></li>
                 <li><a href="#shzyh" style="color: greenyellow">实惠<br>特卖</a></li>
                 <li><a href="#cnxh" style="color: orangered">猜你<br>喜欢</a></li>
                 <li><a href="#" style="color: gray">顶部</a></li>
